--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@
   /* aaa */
 }
 
-body{
+body.wn-body{
   font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
   color: var(--black);
@@ -22,10 +22,10 @@ body{
   margin: 0;
   line-height: 1.4;
 }
-img {
+.wn-body img {
   max-width: 100%;
 }
-a{
+.wn-body a{
   transition: .2s;
   color: var(--black);
   text-decoration: none;
@@ -42,7 +42,7 @@ a{
   width: 100%;
   height: 100%;
 }
-section {
+.wn-body section {
   margin: 80px 0;
 }
 .sec-p {
@@ -50,7 +50,7 @@ section {
   color: var(--grey);
   font-size: 20px;
 }
-p{
+.wn-body p{
   font-size: 20px;
 }
 h1,h2,h3,h4,h5,h6{
@@ -65,35 +65,35 @@ h1,h2,h3,h4{
 .clr-bg h1,.clr-bg h2,.clr-bg h3,.clr-bg h4,.clr-bg h5,.clr-bg h6{
   color: var(--white);
 }
-div[class^='col-'] > .col-sub {
+.wn-body div[class^='col-'] > .col-sub {
   height: 100%;
 }
 
 /* header css */
-.navbar-toggler {
+.wn-body .navbar-toggler {
   border: none;
 }
-.navbar-toggler:focus {
+.wn-body .navbar-toggler:focus {
   box-shadow: none;
 }
-.navbar-brand {
+.wn-body .navbar-brand {
   width: 40px;
 }
-.navbar-brand > img {
+.wn-body .navbar-brand > img {
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
-.navbar {
+.wn-body .navbar {
   margin-top: 50px;
   border-radius: 50px;
   padding: 10px 20px 10px 30px;
   background-color: var(--white-smoke);
 }
-.navbar-toggler-icon {
+.wn-body .navbar-toggler-icon {
   background: unset;
 }
-.btn-fill {
+.wn-body .btn-fill {
   border-radius: 50px;
   background: linear-gradient(180deg, #004444, #499E96);
   color: var(--white) !important;
@@ -102,7 +102,7 @@ div[class^='col-'] > .col-sub {
   width: max-content;
   border: none;
 }
-.btn-outline {
+.wn-body .btn-outline {
   background: var(--white);
   color: var(--dark-cyan) !important;
   border: 2px solid var(--dark-cyan);
@@ -110,16 +110,16 @@ div[class^='col-'] > .col-sub {
 .clr-bg .btn-outline {
   border-color: transparent;
 }
-.btn-fill:hover {
+.wn-body .btn-fill:hover {
   box-shadow: 0px 5px 12px 1px #00000080;
   background-color: var(--white);
 }
-.navbar .nav-link {
+.wn-body .navbar .nav-link {
   color: var(--dark-cyan);
   font-weight: 500;
   padding: 8px 30px !important;
 }
-.navbar .nav-item:hover .nav-link{
+.wn-body .navbar .nav-item:hover .nav-link{
   color: var(--cyan-green);
 }
 .mega-dropdown {
@@ -966,7 +966,7 @@ section {
 .hb-row1 .btn-div .ex-port-lg {
   display: none;
 }
-.navbar {
+.wn-body .navbar {
   margin-top: unset;
   padding: unset;
   background-color: unset;
